<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LogIn_Activity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@drawable/bg4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="70dp"
            android:layout_marginRight="33dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Welcome"
            android:textColor="@color/white"
            android:textSize="25dp" />
        <LinearLayout
            android:id="@+id/main_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/img">

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textEmailAddress"

                android:layout_marginLeft="31dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edittext_bg"
                android:fontFamily="@font/roboto"
                android:hint="@string/email"
                android:textColorHint="@color/hintColor"
                android:padding="10dp"
                android:textSize="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputlayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edittext_bg"
                app:hintEnabled="false"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/hintColor"
                app:startIconTint="@color/hintColor"
                android:layout_marginTop="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textSize="16dp"
                    android:fontFamily="@font/roboto"
                    android:textColorHint="@color/hintColor"
                    android:background="@null"
                    android:hint="Password"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="31dp"
                android:background="@null"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/forget_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget"
                    android:textSize="12dp"
                    android:textColor="#686161"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/roboto"
                    android:layout_marginTop="12dp"/>
                <TextView
                    android:id="@+id/get_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gnew"
                    android:textSize="12dp"
                    android:textColor="#686161"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_marginTop="12dp"/>
            </LinearLayout>
                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_bg"
                    android:layout_gravity="center"
                    android:text="Log in"
                    android:textAllCaps="false"
                    android:layout_marginLeft="69dp"
                    android:layout_marginRight="69dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/white"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_account"
                    android:layout_marginTop="20dp"
                    android:textSize="12dp"
                    android:textColor="#858080"
                    android:fontFamily="@font/roboto"/>
                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_marginTop="20dp"
                    android:textSize="12dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/pinkColor"
                    android:layout_marginLeft="2dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/eng_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="13dp"
                    android:textColor="@color/pinkColor"
                    android:text="@string/eng"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="13dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="30dp"
                    android:layout_toRightOf="@+id/eng_txt"
                    android:textColor="@color/hintColor"
                    android:text="@string/span"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="13dp"
                    android:textColor="@color/hintColor"
                    android:text="@string/portg"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <View
                    android:id="@+id/view1"
                    android:layout_width="130dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/hintColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="@color/pinkColor"
                    android:layout_toRightOf="@+id/view1"
                    android:textSize="14dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/roboto_bold"/>
                <View
                    android:id="@+id/view2"
                    android:layout_width="130dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/hintColor"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/google_img"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/google"/>


                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:visibility="gone"
                    android:layout_marginBottom="30dp" />

                <ImageView
                    android:id="@+id/facebook_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/fb"/>

                <TextView
                    android:id="@+id/e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>


            </LinearLayout>








        </LinearLayout>


    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:layout_alignParentBottom="true"
        android:src="@drawable/bg5"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_height="wrap_content" />
</RelativeLayout>