<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ForgetPassword_Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/bg4"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recover Your\n Password !"
            android:textSize="25dp"
            android:fontFamily="@font/roboto_bold"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:layout_marginTop="70dp"
            android:layout_marginRight="30dp"/>

    </RelativeLayout>
    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/edittext_bg"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
       android:hint="Registered Email"
        android:fontFamily="@font/roboto"
        android:padding="5dp"
        android:textSize="12dp"/>
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:text="After pressing the button please check your email !"
       android:layout_marginTop="15dp"
       android:textSize="12dp"
       android:textColor="#686161"
       android:layout_marginRight="20dp"
       android:fontFamily="@font/roboto"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="if you can't find our email then check your"
            android:textSize="12dp"
            android:textColor="#686161"
            android:fontFamily="@font/roboto"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Spam Mailbox.!"
            android:layout_marginLeft="2dp"
            android:textSize="12dp"
            android:textColor="@color/pinkColor"
            android:fontFamily="@font/roboto"/>
    </LinearLayout>
    
    <Button
        android:id="@+id/sendLink_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_bg"
        android:text="Send Me Recover Link"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:textSize="16dp"
        android:textAllCaps="false"
        android:layout_marginRight="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="35dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="IF YOU JUST GOT IT? THEN"
            android:textSize="12dp"
            android:fontFamily="@font/roboto"
            android:textColor="#858080"/>
        <TextView
            android:id="@+id/sign_up_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pinkColor"
            android:text="@string/sign_up"
            android:layout_marginLeft="2dp"
            android:fontFamily="@font/roboto"
            android:textSize="12dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eng"
            android:textSize="13dp"
            android:textColor="@color/pinkColor"
            android:fontFamily="@font/roboto"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/span"
            android:textSize="13dp"
            android:layout_marginLeft="70dp"
            android:textColor="#858080"
            android:fontFamily="@font/roboto"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portg"
            android:textSize="13dp"
            android:layout_marginLeft="35dp"
            android:textColor="#858080"
            android:fontFamily="@font/roboto"/>
    </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/bg5"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"/>



</RelativeLayout>