<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUp_Activity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:scaleType="fitXY"
            android:src="@drawable/bg2" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="91dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Creat Your Own Account"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <LinearLayout
            android:id="@+id/main_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:orientation="vertical">

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="31dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edittext_bg"
                android:fontFamily="@font/roboto"
                android:hint="Full Name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="@color/hintColor"
                android:textSize="16dp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/img"
                android:layout_marginLeft="31dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="@color/hintColor"
                android:textSize="16dp"
                tools:ignore="TouchTargetSizeCheck" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputlayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edittext_bg"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/hintColor"
                app:hintEnabled="false"
                app:startIconTint="@color/hintColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:fontFamily="@font/roboto"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputlayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edittext_bg"

                app:endIconMode="password_toggle"
                app:endIconTint="@color/hintColor"
                app:hintEnabled="false"
                app:startIconTint="@color/hintColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_et"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:fontFamily="@font/roboto"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textColorHint="@color/hintColor"
                    android:textSize="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="31dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/edittext_bg"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="69dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="69dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/roboto_bold"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="ALL READY HAVE AN ACCOUNT ?"
                    android:textColor="@color/hintColor"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/login_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/login"
                    android:textColor="@color/pinkColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/eng_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/eng"
                    android:textColor="@color/pinkColor"
                    android:textSize="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="74dp"
                    android:layout_toRightOf="@+id/eng_txt"
                    android:fontFamily="@font/roboto"
                    android:text="@string/eng"
                    android:textColor="@color/hintColor"
                    android:textSize="13dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="49dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/portg"
                    android:textColor="@color/hintColor"
                    android:textSize="13dp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="30dp">

                <View
                    android:id="@+id/view1"
                    android:layout_width="250dp"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:background="@color/hintColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/view2"
                    android:layout_toRightOf="@+id/view1"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/or"
                    android:textColor="@color/pinkColor"
                    android:textSize="14dp" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="250dp"
                    android:layout_height="1dp"
                    android:layout_alignParentEnd="true"
                    android:background="@color/hintColor" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/google_imge"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/google" />

                <ImageView
                    android:id="@+id/facebook_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/fb" />


            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:src="@drawable/bg3" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_height="wrap_content" />
</RelativeLayout>